--- a/public/fontello/css/fontello-codes.css
+++ b/public/fontello/css/fontello-codes.css
@@ -4,4 +4,5 @@
 .icon-mail:before { content: '\2709'; } /* '✉' */
 .icon-plus:before { content: '\e0c1'; } /* '' */
 .icon-user:before { content: '\f061'; } /* '' */
+.icon-chart-area:before { content: '\f1fe'; } /* '' */
 .icon-key:before { content: '🔑'; } /* '\1f511' */
