--- a/public/fontello/css/fontello-codes.css
+++ b/public/fontello/css/fontello-codes.css
@@ -3,6 +3,7 @@
  
 .icon-mail:before { content: '\2709'; } /* '✉' */
 .icon-plus:before { content: '\e0c1'; } /* '' */
+.icon-eye:before { content: '\e70a'; } /* '' */
 .icon-user:before { content: '\f061'; } /* '' */
 .icon-chart-area:before { content: '\f1fe'; } /* '' */
 .icon-key:before { content: '🔑'; } /* '\1f511' */
