--- a/public/fontello/css/fontello.css
+++ b/public/fontello/css/fontello.css
@@ -2,12 +2,12 @@
 
  @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?27440269');
-  src: url('../font/fontello.eot?27440269#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?27440269') format('woff2'),
-       url('../font/fontello.woff?27440269') format('woff'),
-       url('../font/fontello.ttf?27440269') format('truetype'),
-       url('../font/fontello.svg?27440269#fontello') format('svg');
+  src: url('../font/fontello.eot?10773726');
+  src: url('../font/fontello.eot?10773726#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?10773726') format('woff2'),
+       url('../font/fontello.woff?10773726') format('woff'),
+       url('../font/fontello.ttf?10773726') format('truetype'),
+       url('../font/fontello.svg?10773726#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -17,7 +17,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?27440269#fontello') format('svg');
+    src: url('../font/fontello.svg?10773726#fontello') format('svg');
   }
 }
 */
@@ -59,6 +59,7 @@
  
 .icon-mail:before { content: '\2709'; } /* '✉' */
 .icon-plus:before { content: '\e0c1'; } /* '' */
+.icon-eye:before { content: '\e70a'; } /* '' */
 .icon-user:before { content: '\f061'; } /* '' */
 .icon-chart-area:before { content: '\f1fe'; } /* '' */
 .icon-key:before { content: '🔑'; } /* '\1f511' */
