--- a/public/fontello/css/fontello.css
+++ b/public/fontello/css/fontello.css
@@ -2,12 +2,12 @@
 
  @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?24658933');
-  src: url('../font/fontello.eot?24658933#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?24658933') format('woff2'),
-       url('../font/fontello.woff?24658933') format('woff'),
-       url('../font/fontello.ttf?24658933') format('truetype'),
-       url('../font/fontello.svg?24658933#fontello') format('svg');
+  src: url('../font/fontello.eot?89254285');
+  src: url('../font/fontello.eot?89254285#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?89254285') format('woff2'),
+       url('../font/fontello.woff?89254285') format('woff'),
+       url('../font/fontello.ttf?89254285') format('truetype'),
+       url('../font/fontello.svg?89254285#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -17,7 +17,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?24658933#fontello') format('svg');
+    src: url('../font/fontello.svg?89254285#fontello') format('svg');
   }
 }
 */
@@ -58,6 +58,7 @@
 }
  
 .icon-mail:before { content: '\2709'; } /* '✉' */
+.icon-search:before { content: '\e03e'; } /* '' */
 .icon-eye:before { content: '\e09d'; } /* '' */
 .icon-plus:before { content: '\e0c1'; } /* '' */
 .icon-eye-off:before { content: '\e102'; } /* '' */
