--- a/public/fontello/css/fontello.css
+++ b/public/fontello/css/fontello.css
@@ -2,12 +2,12 @@
 
  @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?89254285');
-  src: url('../font/fontello.eot?89254285#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?89254285') format('woff2'),
-       url('../font/fontello.woff?89254285') format('woff'),
-       url('../font/fontello.ttf?89254285') format('truetype'),
-       url('../font/fontello.svg?89254285#fontello') format('svg');
+  src: url('../font/fontello.eot?7075785');
+  src: url('../font/fontello.eot?7075785#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?7075785') format('woff2'),
+       url('../font/fontello.woff?7075785') format('woff'),
+       url('../font/fontello.ttf?7075785') format('truetype'),
+       url('../font/fontello.svg?7075785#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -17,7 +17,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?89254285#fontello') format('svg');
+    src: url('../font/fontello.svg?7075785#fontello') format('svg');
   }
 }
 */
@@ -62,6 +62,9 @@
 .icon-eye:before { content: '\e09d'; } /* '' */
 .icon-plus:before { content: '\e0c1'; } /* '' */
 .icon-eye-off:before { content: '\e102'; } /* '' */
+.icon-pharmacy:before { content: '\e829'; } /* '' */
 .icon-user:before { content: '\f061'; } /* '' */
+.icon-users:before { content: '\f064'; } /* '' */
 .icon-chart-area:before { content: '\f1fe'; } /* '' */
+.icon-heartbeat:before { content: '\f21e'; } /* '' */
 .icon-key:before { content: '🔑'; } /* '\1f511' */
