--- a/public/fontello/css/fontello-codes.css
+++ b/public/fontello/css/fontello-codes.css
@@ -2,7 +2,9 @@
 
  
 .icon-mail:before { content: '\2709'; } /* '✉' */
+.icon-vcard:before { content: '\e033'; } /* '' */
 .icon-search:before { content: '\e03e'; } /* '' */
+.icon-location:before { content: '\e095'; } /* '' */
 .icon-eye:before { content: '\e09d'; } /* '' */
 .icon-plus:before { content: '\e0c1'; } /* '' */
 .icon-eye-off:before { content: '\e102'; } /* '' */
