--- a/public/fontello/css/fontello.css
+++ b/public/fontello/css/fontello.css
@@ -2,12 +2,12 @@
 
  @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?7075785');
-  src: url('../font/fontello.eot?7075785#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?7075785') format('woff2'),
-       url('../font/fontello.woff?7075785') format('woff'),
-       url('../font/fontello.ttf?7075785') format('truetype'),
-       url('../font/fontello.svg?7075785#fontello') format('svg');
+  src: url('../font/fontello.eot?18949799');
+  src: url('../font/fontello.eot?18949799#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?18949799') format('woff2'),
+       url('../font/fontello.woff?18949799') format('woff'),
+       url('../font/fontello.ttf?18949799') format('truetype'),
+       url('../font/fontello.svg?18949799#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -17,7 +17,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?7075785#fontello') format('svg');
+    src: url('../font/fontello.svg?18949799#fontello') format('svg');
   }
 }
 */
@@ -58,7 +58,9 @@
 }
  
 .icon-mail:before { content: '\2709'; } /* '✉' */
+.icon-vcard:before { content: '\e033'; } /* '' */
 .icon-search:before { content: '\e03e'; } /* '' */
+.icon-location:before { content: '\e095'; } /* '' */
 .icon-eye:before { content: '\e09d'; } /* '' */
 .icon-plus:before { content: '\e0c1'; } /* '' */
 .icon-eye-off:before { content: '\e102'; } /* '' */
